# libredirect

./: CMakeLists.txt
include/: CMakeLists.txt
include/redirect/: api.h  decoder.h  overlay.h  types.h  unprotected.h
src/: CMakeLists.txt  decoder_amd.cpp  overlay.cpp  redirect.cpp
test/: CMakeLists.txt  example1.cpp
